apps/slurp-news/slurp-news-ext-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: slurp-news-ext
  annotations:
    kubernetes.io/ingress.class: "nginx"
  labels:
    type: external
spec:
  tls:
    - hosts:
        - news.former-hostname.com
      secretName: news.former-hostname.com
  rules:
    - host: news.former-hostname.com
      http:
        paths:
          - backend:
              service:
                name: slurp-news
                port:
                  number: 3000
            path: /
            pathType: Prefix
